--- a/home.html
+++ b/home.html
@@ -3,22 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Jonathan Lin's Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Header with Navigation -->
+  <!-- Header with Name and Main Navigation -->
   <header>
-    <div class="menu-icon" onclick="toggleMenu()">☰</div>
-    <nav id="navMenu" class="nav-menu">
+    <div class="name-title">
+      <span class="name">Jonathan Lin</span>
+      <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    </div>
+    <nav class="main-nav">
       <a href="#home">Home</a>
+      <a href="#portfolio">Portfolio/Works</a>
+      <a href="#about">About Me</a>
+      <a href="#contact">Contact</a>
+    </nav>
+    <!-- Pull-Out Navigation Menu -->
+    <nav id="navMenu" class="nav-menu">
       <a href="#portfolio">Portfolio/Works</a>
       <a href="#skills">Skills</a>
       <a href="#certifications">Certifications & Awards</a>
       <a href="#resume">Resumes and CVs</a>
       <a href="#about">About Me</a>
       <a href="#contact">Contact</a>
+      <div class="social-links">
+        <a href="https://facebook.com">Facebook</a>
+        <a href="https://linkedin.com">LinkedIn</a>
+        <a href="https://twitter.com">Twitter</a>
+      </div>
     </nav>
   </header>
 
@@ -27,7 +41,7 @@
     <div class="intro">
       <img src="my-professional-photo.jpeg" alt="Professional Picture" class="profile-pic">
       <div class="bio">
-        <h1>Jonathan Lin</h1>
+        <h1>Welcome to Jonathan Lin's Portfolio</h1>
         <p>Brief biography and summary of achievements including education.</p>
       </div>
     </div>
@@ -49,11 +63,6 @@
   <footer>
     <div class="contact-info">
       <p>Your Contact Details</p>
-      <ul class="social-links">
-        <li><a href="https://facebook.com">Facebook</a></li>
-        <li><a href="https://linkedin.com">LinkedIn</a></li>
-        <li><a href="https://twitter.com">Twitter</a></li>
-      </ul>
     </div>
     <form id="contact-form" onsubmit="submitForm(event)">
       <h3>Contact Me</h3>
