--- a/home.html
+++ b/home.html
@@ -10,36 +10,35 @@
 <body>
   <!-- Header with Name and Main Navigation -->
   <header>
-    <div class="name-title">
-      <span class="name">Jonathan Lin</span>
-      <div class="menu-icon" onclick="toggleMenu()">☰</div>
-    </div>
+    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <span class="name">Jonathan Lin</span>
     <nav class="main-nav">
       <a href="#home">Home</a>
       <a href="#portfolio">Portfolio/Works</a>
       <a href="#about">About Me</a>
       <a href="#contact">Contact</a>
     </nav>
-    <!-- Pull-Out Navigation Menu -->
-    <nav id="navMenu" class="nav-menu">
-      <a href="#portfolio">Portfolio/Works</a>
-      <a href="#skills">Skills</a>
-      <a href="#certifications">Certifications & Awards</a>
-      <a href="#resume">Resumes and CVs</a>
-      <a href="#about">About Me</a>
-      <a href="#contact">Contact</a>
-      <div class="social-links">
-        <a href="https://facebook.com">Facebook</a>
-        <a href="https://linkedin.com">LinkedIn</a>
-        <a href="https://twitter.com">Twitter</a>
-      </div>
-    </nav>
   </header>
+
+  <!-- Pull-Out Navigation Menu -->
+  <nav id="navMenu" class="nav-menu">
+    <a href="#portfolio">Portfolio/Works</a>
+    <a href="#skills">Skills</a>
+    <a href="#certifications">Certifications & Awards</a>
+    <a href="#resume">Resumes and CVs</a>
+    <a href="#about">About Me</a>
+    <a href="#contact">Contact</a>
+    <div class="social-links">
+      <a href="https://facebook.com">Facebook</a>
+      <a href="https://linkedin.com">LinkedIn</a>
+      <a href="https://twitter.com">Twitter</a>
+    </div>
+  </nav>
 
   <!-- Main Content -->
   <section id="home" class="home-section">
     <div class="intro">
-      <img src="my-professional-photo.jpeg" alt="Professional Picture" class="profile-pic">
+      <img src="your-professional-photo.jpg" alt="Your Professional Picture" class="profile-pic">
       <div class="bio">
         <h1>Welcome to Jonathan Lin's Portfolio</h1>
         <p>Brief biography and summary of achievements including education.</p>
