--- a/home.html
+++ b/home.html
@@ -10,8 +10,10 @@
 <body>
   <!-- Header with Name and Main Navigation -->
   <header>
-    <div class="menu-icon" onclick="toggleMenu()">☰</div>
-    <span class="name">Jonathan Lin</span>
+    <div class="left-section">
+      <div class="menu-icon" onclick="toggleMenu()">☰</div>
+      <span class="name">Jonathan Lin</span>
+    </div>
     <nav class="main-nav">
       <a href="#home">Home</a>
       <a href="#portfolio">Portfolio/Works</a>
