--- a/home.html
+++ b/home.html
@@ -24,6 +24,9 @@
 
   <!-- Pull-Out Navigation Menu -->
   <nav id="navMenu" class="nav-menu">
+    <div class="menu-header">
+      <span class="menu-name">Jonathan Lin</span>
+    </div>
     <a href="#portfolio">Portfolio/Works</a>
     <a href="#skills">Skills</a>
     <a href="#certifications">Certifications & Awards</a>
