--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <header>
   <div class="header-left">
     <!-- Hamburger Icon for Navigation Menu -->
-    <div class="menu-icon" onclick="toggleMenu()">☰</div>
+    <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
     <span class="name">Jonathan Lin</span>
   </div>
   <nav class="main-nav">
@@ -95,3 +95,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
