--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   <!-- Header with Name and Main Navigation -->
   <header>
     <div class="left-section">
-      <div class="menu-icon" onclick="toggleMenu()">☰</div>
+      <div id = "menuIcon" class="menu-icon" onclick="toggleMenu()">☰</div>
       <span class="name">Jonathan Lin</span>
     </div>
     <nav class="main-nav">
@@ -43,7 +43,7 @@
   <!-- Main Content -->
   <section id="home" class="home-section">
     <div class="intro">
-      <img src="your-professional-photo.jpg" alt="Your Professional Picture" class="profile-pic">
+      <img src="my-professional-photo.jpeg" alt="My Professional Picture" class="profile-pic">
       <div class="bio">
         <h1>Welcome to Jonathan Lin's Portfolio</h1>
         <p>Brief biography and summary of achievements including education.</p>
