--- a/home.html
+++ b/home.html
@@ -63,24 +63,12 @@
     </div>
   </section>
 
-  <!-- Footer with Contact Form and Social Links -->
+  <!-- Footer with Contact FAQ and Social Links -->
   <footer>
-    <div class="contact-info">
-      <p>Your Contact Details</p>
-    </div>
-    <form id="contact-form" onsubmit="submitForm(event)">
-      <h3>Contact Me</h3>
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required>
-      <label for="message">Message:</label>
-      <textarea id="message" name="message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-    <div class="faq">
-      <h3>FAQ</h3>
-      <p>Common questions and answers.</p>
+    <div class="footer-links">
+      <a href="#contact">Contact</a>
+      <a href="#faq">FAQ</a>
+      <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
     </div>
   </footer>
 </body>
