--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
     </div>
     <div class="skills">
       <h2>Skills</h2>
-      <p>Summary of your professional skills.</p>
+      <p>Technical Skills: Adobe Photoshop, Microsoft Office (Access, Word, PowerPoint), Microsoft Excel (COUNTIF, VLOOKUP, Pivot Tables), IBM SPSS, R, Microsoft SQL, HTML5, CSS3, JavaScript, Python, and adaptive to new technological skills.</p>
     </div>
     <div class="references">
       <h2>Employer/Professor Reference</h2>
