--- a/home.html
+++ b/home.html
@@ -28,7 +28,6 @@
       <span class="menu-name">Jonathan Lin</span>
     </div>
     <a href="#portfolio">Portfolio/Works</a>
-    <a href="#skills">Skills</a>
     <a href="#certifications">Certifications & Awards</a>
     <a href="#resume">Resumes and CVs</a>
     <a href="#about">About Me</a>
@@ -50,11 +49,13 @@
       </div>
     </div>
     <div class="scroll-content">
-      <h2>The Type of Person I Am</h2>
+      <h2>Traits</h2>
       <p>Describe your personality and what you’re looking for in a job.</p>
     </div>
     <div class="skills">
       <h2>Skills</h2>
+      <p>Communication, Problem-Solving, Teamwork, Decision Making, Leadership, Critical Thinking, Working Under Pressure, Time Management</p>
+      <br>
       <p>Technical Skills: Adobe Photoshop, Microsoft Office (Access, Word, PowerPoint), Microsoft Excel (COUNTIF, VLOOKUP, Pivot Tables), IBM SPSS, R, Microsoft SQL, HTML5, CSS3, JavaScript, Python, and adaptive to new technological skills.</p>
     </div>
     <div class="references">
