--- a/home.html
+++ b/home.html
@@ -44,13 +44,15 @@
     <div class="intro">
       <img src="my-professional-photo.jpeg" alt="My Professional Picture" class="profile-pic">
       <div class="bio">
-        <h1>Welcome to Jonathan Lin's Portfolio</h1>
-        <p>Brief biography and summary of achievements including education.</p>
+        <h1>Welcome to Jonathan Lin's Website</h1>
+        <p>I am currently a fifth-year Business Technology Management student in the Ted Rogers School of Management co-op program at Toronto Metropolitan University. I aspire to be part of a team with values that align with my own and I believe all experiences have the potential to pave the way to success. I made it my objective to learn and develop skills to better serve the industry as well as provide myself with a sense of satisfaction in personal growth.</p>
       </div>
     </div>
     <div class="scroll-content">
-      <h2>Traits</h2>
-      <p>Describe your personality and what you’re looking for in a job.</p>
+      <h2>Education</h2>
+      <h4>Bachelor of Commerce - Business Technology Management w/ Co-op Distinction</h4>
+      <br>
+      <p>Ted Rogers School of Management, Toronto Metropolitan University </p>
     </div>
     <div class="skills">
       <h2>Skills</h2>
