--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,40 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <!-- Header with Name and Main Navigation -->
+  <header>
+    <div class="left-section">
+      <div id = "menuIcon" class="menu-icon" onclick="toggleMenu()">☰</div>
+      <span class="name">Jonathan Lin</span>
+    </div>
+    <nav class="main-nav">
+      <a href="home.html">Home</a>
+      <a href="portfolio.html">Portfolio/Works</a>
+      <a href="about.html">About Me</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <!-- Pull-Out Navigation Menu -->
+  <nav id="navMenu" class="nav-menu">
+    <div class="menu-header">
+      <span class="menu-name">Jonathan Lin</span>
+    </div>
+    <a href="portfolio.html">Portfolio/Works</a>
+    <a href="certifications.html">Certifications & Awards</a>
+    <a href="resume.html">Resumes and CVs</a>
+    <a href="about.html">About Me</a>
+    <a href="contact.html">Contact</a>
+    <div class="social-links">
+      <a href="https://facebook.com">Facebook</a>
+      <a href="https://linkedin.com">LinkedIn</a>
+      <a href="https://twitter.com">Twitter</a>
+    </div>
+  </nav>
