--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <span class="name">Jonathan Lin</span>
     </div>
     <nav class="main-nav">
-      <a href="#home">Home</a>
-      <a href="#portfolio">Portfolio/Works</a>
-      <a href="#about">About Me</a>
-      <a href="#contact">Contact</a>
+      <a href="home.html">Home</a>
+      <a href="portfolio.html">Portfolio/Works</a>
+      <a href="about.html">About Me</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
@@ -27,11 +27,11 @@
     <div class="menu-header">
       <span class="menu-name">Jonathan Lin</span>
     </div>
-    <a href="#portfolio">Portfolio/Works</a>
-    <a href="#certifications">Certifications & Awards</a>
-    <a href="#resume">Resumes and CVs</a>
-    <a href="#about">About Me</a>
-    <a href="#contact">Contact</a>
+    <a href="portfolio.html">Portfolio/Works</a>
+    <a href="certifications.html">Certifications & Awards</a>
+    <a href="resume.html">Resumes and CVs</a>
+    <a href="about.html">About Me</a>
+    <a href="contact.html">Contact</a>
     <div class="social-links">
       <a href="https://facebook.com">Facebook</a>
       <a href="https://linkedin.com">LinkedIn</a>
