--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <span class="name">Jonathan Lin</span>
     </div>
     <nav class="main-nav">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="portfolio.html">Portfolio/Works</a>
       <a href="about.html">About Me</a>
       <a href="contact.html">Contact</a>
