--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
   <!-- Pull-Out Navigation Menu -->
   <nav id="navMenu" class="nav-menu">
     <div class="menu-header">
-      <span class="menu-name">Jonathan Lin</span>
+      <a href="index.html" class="menu-name">Jonathan Lin</a> <!-- Make this a link to index.html -->
     </div>
     <a href="portfolio.html">Portfolio/Works</a>
     <a href="certifications.html">Certifications & Awards</a>
