--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
       <span class="name">Jonathan Lin</span>
     </div>
     <nav class="main-nav">
-      <a href="index.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="portfolio.html">Portfolio/Works</a>
       <a href="about.html">About Me</a>
       <a href="contact.html">Contact</a>
@@ -25,7 +25,7 @@
   <!-- Pull-Out Navigation Menu -->
   <nav id="navMenu" class="nav-menu">
     <div class="menu-header">
-      <a href="index.html" class="menu-name">Jonathan Lin</a> <!-- Make this a link to index.html -->
+      <span class="menu-name">Jonathan Lin</span>
     </div>
     <a href="portfolio.html">Portfolio/Works</a>
     <a href="certifications.html">Certifications & Awards</a>
