--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <header>
     <div class="left-section">
       <div id = "menuIcon" class="menu-icon" onclick="toggleMenu()">☰</div>
-      <span class="name">Jonathan Lin</span>
+      <a href="index.html" class="name">Jonathan Lin</a> <!-- Link to index.html -->
+  </div>
     </div>
     <nav class="main-nav">
       <a href="index.html">Home</a>
@@ -25,7 +26,7 @@
   <!-- Pull-Out Navigation Menu -->
   <nav id="navMenu" class="nav-menu">
     <div class="menu-header">
-      <span class="menu-name">Jonathan Lin</span>
+      <span class="name">Jonathan Lin</span>
     </div>
     <a href="portfolio.html">Portfolio/Works</a>
     <a href="certifications.html">Certifications & Awards</a>
