--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
   <header>
     <div class="left-section">
       <div id = "menuIcon" class="menu-icon" onclick="toggleMenu()">☰</div>
-      <span class="name">Jonathan Lin</span>
+      <a href="index.html" class="name">Jonathan Lin</a> <!-- Link to index.html -->
     </div>
     <nav class="main-nav">
       <a href="home.html">Home</a>
