--- a/index.html
+++ b/index.html
@@ -71,11 +71,18 @@
 
   <!-- Footer with Contact FAQ and Social Links -->
   <footer>
-    <div class="footer-links">
-      <a href="#contact">Contact</a>
-      <a href="#faq">FAQ</a>
-      <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
+    <div class="footer-content">
+      <div class="contact-info">
+        <h4>Contact Me</h4>
+        <p>Jonathan Lin</p>
+        <p>Phone: (123) 456-7890</p> <!-- Replace with your actual phone number -->
+        <p>Email: jonathan@example.com</p> <!-- Replace with your actual email address -->
+      </div>
+      <div class="footer-links">
+        <a href="contact.html">Contact</a>
+        <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
+      </div>
     </div>
-  </footer>
+  </footer>  
 </body>
 </html>
