--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <h3>Contact Me</h3>
         <br>
         <p>Jonathan Lin</p>
-        <p>Phone: (123) 456-7890</p> <!-- Replace with your actual phone number -->
-        <p>Email: jonathan@example.com</p> <!-- Replace with your actual email address -->
+        <p>Phone: (437) 350-0713</p> <!-- Replace with your actual phone number -->
+        <p>Email: jonathan3.lin@torontomu.ca</p> <!-- Replace with your actual email address -->
       </div>
       <div class="footer-links">
         <a href="contact.html">Contact</a>
