--- a/index.html
+++ b/index.html
@@ -76,13 +76,18 @@
         <h3>Contact Me</h3>
         <br>
         <p>Jonathan Lin</p>
-        <p>Phone: (437) 350-0713</p> <!-- Replace with your actual phone number -->
-        <p>Email: jonathan3.lin@torontomu.ca</p> <!-- Replace with your actual email address -->
+        <p>Phone: (437) 350-0713</p>
+        <p>Email: jonathan3.lin@torontomu.ca</p>
       </div>
-      <div class="footer-links">
-        <a href="contact.html">Contact</a>
+      <!-- Right Column: Contact Links -->
+      <div class="contact-links-column">
+        <h3>Quick Links</h3>
+        <br>
+        <a href="contact.html">Contact Page</a>
         <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
       </div>
+  </div>
+</footer>
     </div>
   </footer>  
 </body>
