--- a/contact.html
+++ b/contact.html
@@ -38,3 +38,25 @@
       <a href="https://twitter.com">Twitter</a>
     </div>
   </nav>
+
+  <!-- Footer with Contact and Social Links -->
+  <footer>
+    <div class="footer-content">
+      <!-- Contact Info -->
+      <div class="contact-info">
+        <h3>Contact Me</h3>
+        <br>
+        <p>Jonathan Lin</p>
+        <p>Phone: (437) 350-0713</p>
+        <p>Email: jonathan3.lin@torontomu.ca</p>
+      </div>
+      <!-- Contact Links -->
+      <div class="contact-links-column">
+        <h3>Quick Links</h3>
+        <br>
+        <a href="contact.html">Contact Page</a>
+        <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
+      </div>
+    </div>
+  </footer>
+</body>
