--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
     </nav>
   </header>
 
+
   <!-- Pull-Out Navigation Menu -->
   <nav id="navMenu" class="nav-menu">
     <div class="menu-header">
@@ -39,3 +40,24 @@
     </div>
   </nav>
 
+  <!-- Footer with Contact and Social Links -->
+  <footer>
+    <div class="footer-content">
+      <!-- Contact Info -->
+      <div class="contact-info">
+        <h3>Contact Me</h3>
+        <br>
+        <p>Jonathan Lin</p>
+        <p>Phone: (437) 350-0713</p>
+        <p>Email: jonathan3.lin@torontomu.ca</p>
+      </div>
+      <!-- Contact Links -->
+      <div class="contact-links-column">
+        <h3>Quick Links</h3>
+        <br>
+        <a href="contact.html">Contact Page</a>
+        <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
+      </div>
+    </div>
+  </footer>
+</body>
