--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
+  
 
   <!-- Pull-Out Navigation Menu -->
   <nav id="navMenu" class="nav-menu">
@@ -39,6 +39,17 @@
       <a href="https://twitter.com">Twitter</a>
     </div>
   </nav>
+
+  <!-- Main Content -->
+  <section id="about" class="about-section">
+    <div class="aboutme">
+      <img src="IMG_7478.jpg" alt="OutdoorsPic" class="outdoors-pic">
+      <div class="bio">
+        <h1>About Me</h1>
+        <br>
+        <p>Hello!</p>
+      </div>
+    </div>
 
   <!-- Footer with Contact and Social Links -->
   <footer>
