--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
   <section id="about" class="about-section">
     <div class="aboutme">
       <img src="IMG_7478.jpg" alt="OutdoorsPic" class="outdoors-pic">
-      <div class="bio">
+      <div class="about-me">
         <h1>About Me</h1>
         <br>
         <p>Hello!</p>
