--- a/about.html
+++ b/about.html
@@ -46,25 +46,9 @@
       <img src="IMG_9746.jpg" alt="OutdoorsPic" class="outdoors-pic">
         <h1>About Me</h1>
         <br>
-        <p>Hello!</p>
+        <p>I am a dedicated, charismatic, and responsible student with a strong passion for learning and personal growth. With a CGPA above 3.6 at TMU, I have balanced academics with extensive part-time work and volunteer experiences, demonstrating my commitment and adaptability. My involvement in DECA and volunteer data analytics research projects has refined my analytical and leadership abilities, while my roles in customer service have taught me the value of teamwork and conflict resolution in fast-paced environments. Working as a restaurant server and barista, I developed essential problem-solving skills and learned to stay composed under pressure, engaging hundreds of customers each day with a positive and proactive attitude. Through co-op positions with the Ontario Chamber of Commerce as a Marketing Advisor and with Green Infrastructure Partners as an IT Intern, I furthered my technical knowledge and interpersonal skills, gaining valuable insights into professional environments. I’m proficient in Microsoft 365, HTML, CSS, JavaScript, SQL, R, and Python, and I'm continually eager to learn and take on new challenges. With each opportunity, I strive to advance my skills, contribute meaningfully, and grow both personally and professionally.</p>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <p>I enjoy spending time outdoors, whether it’s camping, hiking, or canoeing in Canada's national parks. Growing up in Scouts, I developed essential survival skills that enhance my adventures. I also love meeting new people and connecting with others who share a passion for the outdoors.</p>
     </div>
 
   <!-- Footer with Contact and Social Links -->
