--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
     </div>
   </section>
 
-  <!-- Footer with Contact FAQ and Social Links -->
+  <!-- Footer with Contact and Social Links -->
   <footer>
     <div class="footer-content">
+      <!-- Contact Info -->
       <div class="contact-info">
         <h3>Contact Me</h3>
         <br>
@@ -79,7 +80,7 @@
         <p>Phone: (437) 350-0713</p>
         <p>Email: jonathan3.lin@torontomu.ca</p>
       </div>
-      <!-- Right Column: Contact Links -->
+      <!-- Contact Links -->
       <div class="contact-links-column">
         <h3>Quick Links</h3>
         <br>
@@ -87,8 +88,6 @@
         <a href="https://www.linkedin.com/in/jonathan-lin-755706212/" target="_blank">LinkedIn</a>
       </div>
   </div>
-</footer>
-    </div>
-  </footer>  
+</footer>  
 </body>
 </html>
