--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
 </head>
+
 <body>
   <!-- Header with Name and Main Navigation -->
   <header>
@@ -22,7 +24,6 @@
     </nav>
   </header>
   
-
   <!-- Pull-Out Navigation Menu -->
   <nav id="navMenu" class="nav-menu">
     <div class="menu-header">
@@ -72,3 +73,4 @@
     </div>
   </footer>
 </body>
+</html>
