--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@
         <p>I enjoy spending time outdoors, whether it’s camping, hiking, or canoeing in Canada's national parks. Growing up in Scouts, I developed essential survival skills that enhance my adventures. I also love meeting new people and connecting with others who share a passion for the outdoors.</p>
       </div>
     </div>
+  </section>
 
   <!-- Footer with Contact and Social Links -->
   <footer>
