--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,64 @@
     </div>
   </nav>
 
+  <!-- Contact Form Section -->
+  <main class="contact-form-container">
+    <h2>Get in Touch</h2>
+    <form id="contactForm" onsubmit="handleSubmit(event)">
+      <div class="form-group">
+        <label for="fullName">Full Name *</label>
+        <input type="text" id="fullName" name="fullName" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email Address *</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="phone">Phone Number *</label>
+        <input type="tel" id="phone" name="phone" required>
+      </div>
+
+      <div class="form-group">
+        <label for="company">Company</label>
+        <input type="text" id="company" name="company">
+      </div>
+
+      <div class="form-group">
+        <label for="position">Position</label>
+        <input type="text" id="position" name="position">
+      </div>
+
+      <div class="form-group">
+        <label for="subject">Subject/Reason for Contact *</label>
+        <select id="subject" name="subject" required>
+          <option value="">Select a reason</option>
+          <option value="hiring">Hiring</option>
+          <option value="connecting">Interested in connecting</option>
+          <option value="questions">Questions</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message *</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+      </div>
+
+      <div class="form-group">
+        <label for="preferredContact">Preferred Contact Method *</label>
+        <select id="preferredContact" name="preferredContact" required>
+          <option value="">Select preferred method</option>
+          <option value="call">Call</option>
+          <option value="text">Text</option>
+          <option value="email">Email</option>
+        </select>
+      </div>
+
+      <button type="submit" class="submit-btn">Submit</button>
+    </form>
+  </main>
+
   <!-- Footer with Contact and Social Links -->
   <footer>
     <div class="footer-content">
