--- a/portfolio.html
+++ b/portfolio.html
@@ -39,6 +39,86 @@
     </div>
   </nav>
 
+  <section class="portfolio">
+    <div class="portfolio-container">
+        <!-- Work Experience Section -->
+        <div class="experience-section">
+            <h2>Work Experience</h2>
+            
+            <div class="experience-item">
+                <h3>Software Engineer</h3>
+                <p class="company">Tech Company Name</p>
+                <p class="duration">June 2022 - Present</p>
+                <ul>
+                    <li>Led development of a full-stack web application that increased user engagement by 40%</li>
+                    <li>Collaborated with cross-functional teams to implement new features and optimize existing systems</li>
+                    <li>Mentored junior developers and conducted code reviews to maintain high code quality standards</li>
+                </ul>
+            </div>
+
+            <div class="experience-item">
+                <h3>Web Developer Intern</h3>
+                <p class="company">Startup Name</p>
+                <p class="duration">May 2021 - August 2021</p>
+                <ul>
+                    <li>Developed responsive web interfaces using React.js and implemented REST APIs</li>
+                    <li>Optimized database queries resulting in 30% faster page load times</li>
+                    <li>Created automated testing scripts that reduced QA time by 25%</li>
+                </ul>
+            </div>
+
+            <div class="experience-item">
+                <h3>Technical Support Specialist</h3>
+                <p class="company">IT Solutions Corp</p>
+                <p class="duration">January 2020 - April 2021</p>
+                <ul>
+                    <li>Resolved 200+ technical issues monthly with a 95% customer satisfaction rate</li>
+                    <li>Implemented a new ticketing system that improved response time by 50%</li>
+                    <li>Created technical documentation that reduced common support queries by 30%</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Extracurricular and Leadership Section -->
+        <div class="experience-section">
+            <h2>Extracurricular and Leadership Involvement</h2>
+            
+            <div class="experience-item">
+                <h3>Computer Science Club President</h3>
+                <p class="company">University Name</p>
+                <p class="duration">2021 - 2022</p>
+                <ul>
+                    <li>Organized weekly coding workshops and hackathons for 100+ student members</li>
+                    <li>Established partnerships with local tech companies for student mentorship programs</li>
+                    <li>Increased club membership by 75% through targeted outreach and engaging events</li>
+                </ul>
+            </div>
+
+            <div class="experience-item">
+                <h3>Volunteer Tech Instructor</h3>
+                <p class="company">Local Community Center</p>
+                <p class="duration">2020 - 2021</p>
+                <ul>
+                    <li>Taught basic programming concepts to underprivileged youth aged 12-18</li>
+                    <li>Developed curriculum for introductory web development courses</li>
+                    <li>Mentored 20+ students who went on to pursue tech-related education</li>
+                </ul>
+            </div>
+
+            <div class="experience-item">
+                <h3>Hackathon Team Lead</h3>
+                <p class="company">Various Competitions</p>
+                <p class="duration">2019 - Present</p>
+                <ul>
+                    <li>Led teams of 4-5 members in multiple hackathon competitions</li>
+                    <li>Won first place in University Hackathon for developing an AI-powered education app</li>
+                    <li>Managed project timelines and team member responsibilities during intense 48-hour events</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+  </section>
+
   <!-- Footer with Contact and Social Links -->
   <footer>
     <div class="footer-content">
