--- a/portfolio.html
+++ b/portfolio.html
@@ -46,24 +46,24 @@
             <h2>Work Experience</h2>
             
             <div class="experience-item">
-                <h3>Software Engineer</h3>
-                <p class="company">Tech Company Name</p>
-                <p class="duration">June 2022 - Present</p>
+                <h3>Information Technology Intern</h3>
+                <p class="company">Green Infrastructure Partners</p>
+                <p class="duration">September 2023 - December 2023</p>
                 <ul>
-                    <li>Led development of a full-stack web application that increased user engagement by 40%</li>
-                    <li>Collaborated with cross-functional teams to implement new features and optimize existing systems</li>
-                    <li>Mentored junior developers and conducted code reviews to maintain high code quality standards</li>
+                    <li>Provided first-level support via phone and email, resolving user issues promptly and improving response time through efficient ticketing system usage, including user onboarding and offboarding processes.</li>
+                    <li>Maintained inventory of 500+ desktops, laptops, peripherals, and mobile devices, increasing deployment efficiency by 30% through effective configuration and use of Mobile Device Management (MDM) software.</li>
+                    <li>Streamlined procurement processes for equipment parts, resulting in a 20% reduction in order processing time while preparing and updating reports on time logging, invoices, spending, device usage, and user activity.</li>
                 </ul>
             </div>
 
             <div class="experience-item">
-                <h3>Web Developer Intern</h3>
-                <p class="company">Startup Name</p>
-                <p class="duration">May 2021 - August 2021</p>
+                <h3>E-Commerce Advisor</h3>
+                <p class="company">Ontario Chamber of Commerce</p>
+                <p class="duration">September 2022 - December 2022</p>
                 <ul>
-                    <li>Developed responsive web interfaces using React.js and implemented REST APIs</li>
-                    <li>Optimized database queries resulting in 30% faster page load times</li>
-                    <li>Created automated testing scripts that reduced QA time by 25%</li>
+                    <li>Plan, execute, and facilitate outreach and partnership development activities daily with the 100+ chamber network, businesses, postsecondary institutions, and delivery partners, increasing partnership engagement by 40% throughout the term</li>
+                    <li>Personally supported 20+ businesses with application completion and guide businesses through digital adoption options</li>
+                    <li>Kept accurate records of interactions with businesses using the company's ERP system</li>
                 </ul>
             </div>
 
