--- a/portfolio.html
+++ b/portfolio.html
@@ -47,18 +47,18 @@
             
             <div class="experience-item">
                 <h3>Information Technology Intern</h3>
-                <p class="company">Green Infrastructure Partners</p>
+                <p class="company">Green Infrastructure Partners - Toronto, ON</p>
                 <p class="duration">September 2023 - December 2023</p>
                 <ul>
-                    <li>Provided first-level support via phone and email, resolving user issues promptly and improving response time through efficient ticketing system usage, including user onboarding and offboarding processes.</li>
-                    <li>Maintained inventory of 500+ desktops, laptops, peripherals, and mobile devices, increasing deployment efficiency by 30% through effective configuration and use of Mobile Device Management (MDM) software.</li>
-                    <li>Streamlined procurement processes for equipment parts, resulting in a 20% reduction in order processing time while preparing and updating reports on time logging, invoices, spending, device usage, and user activity.</li>
+                    <li>Provided first-level support via phone and email, resolving user issues promptly and improving response time through efficient ticketing system usage, including user onboarding and offboarding processes</li>
+                    <li>Maintained inventory of 500+ desktops, laptops, peripherals, and mobile devices, increasing deployment efficiency by 30% through effective configuration and use of Mobile Device Management (MDM) software</li>
+                    <li>Streamlined procurement processes for equipment parts, resulting in a 20% reduction in order processing time while preparing and updating reports on time logging, invoices, spending, device usage, and user activity</li>
                 </ul>
             </div>
 
             <div class="experience-item">
                 <h3>E-Commerce Advisor</h3>
-                <p class="company">Ontario Chamber of Commerce</p>
+                <p class="company">Ontario Chamber of Commerce - Remote</p>
                 <p class="duration">September 2022 - December 2022</p>
                 <ul>
                     <li>Plan, execute, and facilitate outreach and partnership development activities daily with the 100+ chamber network, businesses, postsecondary institutions, and delivery partners, increasing partnership engagement by 40% throughout the term</li>
@@ -69,12 +69,12 @@
 
             <div class="experience-item">
                 <h3>Technical Support Specialist</h3>
-                <p class="company">IT Solutions Corp</p>
-                <p class="duration">January 2020 - April 2021</p>
+                <p class="company">Chatime Canada - Toronto, ON</p>
+                <p class="duration">August 2020 - December 2022</p>
                 <ul>
-                    <li>Resolved 200+ technical issues monthly with a 95% customer satisfaction rate</li>
-                    <li>Implemented a new ticketing system that improved response time by 50%</li>
-                    <li>Created technical documentation that reduced common support queries by 30%</li>
+                    <li>Provided superior customer service, accurately processed high-volume transactions, crafted and served drinks to 100+ customers per day</li>
+                    <li>Managed inventory by conducting counts, maintaining stock levels and collaborating with vendors to place orders when required</li>
+                    <li>Demonstrated leadership and responsibility by regularly training new staff and overseeing operations daily to ensure a smooth workflow</li>
                 </ul>
             </div>
         </div>
@@ -84,35 +84,31 @@
             <h2>Extracurricular and Leadership Involvement</h2>
             
             <div class="experience-item">
-                <h3>Computer Science Club President</h3>
-                <p class="company">University Name</p>
-                <p class="duration">2021 - 2022</p>
+                <h3>Data Analysis Research Volunteer</h3>
+                <p class="company">Toronto Metropolitan University</p>
+                <p class="duration">September 2024 - Present</p>
                 <ul>
-                    <li>Organized weekly coding workshops and hackathons for 100+ student members</li>
-                    <li>Established partnerships with local tech companies for student mentorship programs</li>
-                    <li>Increased club membership by 75% through targeted outreach and engaging events</li>
+                    <li>Conducting comprehensive review of 400+ academic journals and articles to support research on the implementation of chatbots in the tourism industry, analyzing data and synthesizing findings into actionable insights</li>
+                    <li>Collaborated closely with the professor to evaluate evidence, apply critical thinking, and develop well-supported arguments on the effectiveness and feasibility of chatbots across various tourism sectors</li>
                 </ul>
             </div>
 
             <div class="experience-item">
-                <h3>Volunteer Tech Instructor</h3>
-                <p class="company">Local Community Center</p>
-                <p class="duration">2020 - 2021</p>
+                <h3>Ted Rogers International and Exchange Network Mentor</h3>
+                <p class="company">Toronto Metropolitan University</p>
+                <p class="duration">September 2024 - Present</p>
                 <ul>
-                    <li>Taught basic programming concepts to underprivileged youth aged 12-18</li>
-                    <li>Developed curriculum for introductory web development courses</li>
-                    <li>Mentored 20+ students who went on to pursue tech-related education</li>
+                    <li>Guided first-year international and exchange students in navigating TRSM and Toronto Metropolitan University, enhancing intercultural communication and community integration while organizing and participating in social events that encourage inclusivity and cultural exchange</li>
                 </ul>
             </div>
 
             <div class="experience-item">
-                <h3>Hackathon Team Lead</h3>
-                <p class="company">Various Competitions</p>
+                <h3>DECA TMU Delegate</h3>
+                <p class="company">Toronto Metropolitan University</p>
                 <p class="duration">2019 - Present</p>
                 <ul>
-                    <li>Led teams of 4-5 members in multiple hackathon competitions</li>
-                    <li>Won first place in University Hackathon for developing an AI-powered education app</li>
-                    <li>Managed project timelines and team member responsibilities during intense 48-hour events</li>
+                    <li>Brought innovative approaches to problems within the allotted time of several minutes </li>
+                    <li>Demonstrated adept communication and presentation skills including speech organization and mutual support with partner</li>
                 </ul>
             </div>
         </div>
